--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vim/vundle.git"]
 	path = .vim/vundle.git
 	url = git://github.com/gmarik/vundle.git
+[submodule "dot.vim/vundle"]
+	path = dot.vim/vundle
+	url = git://github.com/gmarik/vundle.git
